--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Òticas </title>
+    <title> consultório </title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <img src="Logotipo para oftalmologista moderno azul e cinza claro (1).zip" alt="inserir descrição">
   <h1> Menu</h1>
   <li> <a href="link01.html"> Link 01 </a></li>
   <li> <a href="link02.html"> Link 02 </a></li>
