--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <center> <img
     <img src="Logotipo para oftalmologista moderno azul e cinza claro (1).zip" alt="inserir descrição">
   <h1> Menu</h1>
   <li> <a href="link01.html"> Link 01 </a></li>
