--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <center> <img
-    <img src="Logotipo para oftalmologista moderno azul e cinza claro (1).zip" alt="inserir descrição">
+  
+    <img src="logo.PNG" alt="inserir descrição">
   <h1> Menu</h1>
   <li> <a href="link01.html"> Link 01 </a></li>
   <li> <a href="link02.html"> Link 02 </a></li>
