--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-    <img src="logo.PNG.png" alt="inserir descrição">
+    <img src="logo.png" alt="inserir descrição">
   <h1> Menu</h1>
   <li> <a href="link01.html"> Link 01 </a></li>
   <li> <a href="link02.html"> Link 02 </a></li>
