--- a/contato.html
+++ b/contato.html
@@ -34,4 +34,33 @@
         <br/>
         <h1 align = "center"> Contato</h1>
 
-        
+        <tr>
+            <td colspan="3">
+                <p align = "justify">
+                    <fieldset >
+                        <p>Nome completo:
+                        <input type="text" required name="name" size="10" maxlength="20" id="fname" placeholder="">
+                        CPF:
+                        <input type="text" required name="mae" size="20" maxlength="40" id="mae" value="" placeholder="">
+                        Email:
+                        <input type="text" required name="name" size="10" maxlength="20" id="fname" placeholder=""><p></p>
+                        <p>Telefone: DDD (
+                            <input type="tel" required name="ddd" size="1" maxlength="2" id="ddd"placeholder="">)
+                            Tel:<input type="tel" required name="telefone" size="5" maxlength="8" id="tel" placeholder="">
+                        Assunto:
+                        <input type="text" required name="name" size="10" maxlength="20" id="fname" placeholder=""><br/>
+                        <p></p>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        Mensagem:
+                        <input type = "text" name ="mensagem" id = "mensagem" style = 'font-size:80px'><br/>
+                        <p></p>
+                        <div class="informacoes">
+                          
+                            <input type="checkbox" name="vi">ENVIAR UMA CÓPIA PRA VOCÊ<br>
+                            </p>
+                         <input type="submit" name="Enviar mensagem" value="Enviar mensagem">
+                     </html> <br /><br />
+                    </tr>
