--- a/trabalho1/exames.html
+++ b/trabalho1/exames.html
@@ -60,12 +60,12 @@
         <br/>
         <br/>
         <H1 align = "center">Acuidade visual potencial a laser (PAM)</H1>
-    <h2 align ="justify" >
+    <p align ="justify" >
     O PAM é um dos exames oftalmológicos que avaliam o potencial de visão do paciente.
     Ele indicado em contextos pré-operatórios para cirurgias de catarata.
     Nesse caso, ele prediz o quanto o paciente chegará em visão após o procedimento cirúrgico.
     Esse exame também faz parte do protocolo pré-operatório de transplante de córnea e vitrectomia.
-    </h2>
+    </p>
 
      <td width="20%">
      <img src = "assets/imgt1.jpg" >
@@ -82,15 +82,15 @@
     <br/>
 
      <H1 align = "center">Mapeamento da retina</H1>
-     <h2 align ="justify" >
+     <p align ="justify" >
      Mapeamento de retina também é popularmente chamado de “exame do fundo do olho” ou “fundoscopia”.
      Este exame pode identificar algumas doenças ou até mesmo má formações oculares,
      inflamações, problemas neurológicos, reumáticos e hematológicos, retinopatia diabética, 
      hipertensão arterial, glaucoma, descolamento de retina, e até tumores. 
-     </h2>
+     </p>
 
-     <h2>O exame de Mapeamento da retina é realizado pelo médico Oftalmologista que posiciona seu rosto em um aparelho chamado oftalmoscópio 
-    e incide uma luz sobre os seus olhos. Como mostra na imagem a seguir: </h2>
+     <p>O exame de Mapeamento da retina é realizado pelo médico Oftalmologista que posiciona seu rosto em um aparelho chamado oftalmoscópio 
+    e incide uma luz sobre os seus olhos. Como mostra na imagem a seguir: </p>
  
       <td width="20%">
       <img src = "assets/imgt2.webp"  >
@@ -106,16 +106,15 @@
       <br/>
 
       <H1 align = "center">Teste do olhinho</H1>
-      <h2 align ="justify" >
+      <p align ="justify" >
         O teste do olhinho ou teste do reflexo vermelho, é um exame baseado na percepção do reflexo vermelho no olho do recém-nascido.
         Deve ser realizado no próprio berçário sempre antes da alta do bebê, nos primeiros 30 dias de vida.
-      </h2>
+      </p>
 
-      <h2>O Teste do Olhinho pode prever alguns graus severos de miopia, hipermetropia ou estrabismo. 
+      <p>O Teste do Olhinho pode prever alguns graus severos de miopia, hipermetropia ou estrabismo. 
       Além disso, existem doenças mais sérias na lista. São elas: retinopatia da prematuridade, catarata congênita, glaucoma, infecções, traumas do parto e até mesmo cegueira.
       A imagem a seguir mostra como é feito este exame:
-
-      </h2>
+      </p>
   
        <td width="50%">
        <img src = "assets/imgt3.jfif" width= "600px" >
@@ -131,13 +130,13 @@
       <br/>
 
       <H1 align = "center">Ceratometria</H1>
-      <h2 align ="justify" >
+      <p align ="justify" >
     Ceratometria é um exame que mede a curvatura da córnea, 
     a fim de definir o grau da lente intraocular que irá ser usada na cirurgia de catarata ou para cálculos de lentes de contatos, como as rígidas. 
-      </h2>
+      </p>
  
-      <h2>A ceratometria é fundamental para adaptação de lentes de contato,
-     pois o conhecimento prévio da curvatura da córnea serve de parâmetro para a escolha da curvatura da lente de contato. </h2>
+      <p>A ceratometria é fundamental para adaptação de lentes de contato,
+     pois o conhecimento prévio da curvatura da córnea serve de parâmetro para a escolha da curvatura da lente de contato. </p>
   
        <td width="20%">
        <img src = "assets/imgt4.jpg"  >
