--- a/cirugias.html
+++ b/cirugias.html
@@ -63,19 +63,19 @@
         <br/>
         <br/>
         <H1 align = "center">Catarata</H1>
-    <h2 align ="justify" >
+    <p align ="justify" >
         A cirurgia de catarata tem como principal objetivo retirar o cristalino danificado e implantar uma lente intraocular no lugar. 
         Como normalmente as pessoas dizem a doença que deixa com a visão opaca ocorre principalmente em decorrência do envelhecimento,
          porém, existem casos de catarata congênita (de nascença) ou provocada por fatores como exposição demasiada ao sol sem óculos apropriados.   
-    </h2>
+    </p>
 
     
 
      <td width="20%">
      <img src = "assets/imgt5.jpg" >
-     <h3>Está imagem representa a cirurgia de catarata sendo efetuado em um paciente</h3>
+     <p>Está imagem representa a cirurgia de catarata sendo efetuado em um paciente</h3>
 
-     <h2>  A cirurgia de catarata em si é realizada por meio de um método denominado facoemulsificação, que consiste em uma pequena incisão no olho, 
+     <p>  A cirurgia de catarata em si é realizada por meio de um método denominado facoemulsificação, que consiste em uma pequena incisão no olho, 
         fragmentando o cristalino opaco em pedaços bem pequenos, que são aspirados imediatamente.
          Em seguida, o doutor cirurgião introduz a lente que irá substituir o cristalino.</h2>
     <br/>
@@ -88,11 +88,11 @@
     <br/>
 
      <H1 align = "center">Pterígio</H1>
-     <h2 align ="justify" >
+     <p align ="justify" >
         Popularmente conhecido como “carne no olho”, o pterígio é uma alteração na conjuntiva, a membrana transparente que recobre a parte branca do olho.
         A Cirurgia de Pterígio consiste na remoção dessa “carne” com uso de anestesia local e, depois, realiza um micro enxerto conjuntival.
         O procedimento é considerado simples e de fácil recuperação.
-     </h2>
+     </p>
 
       <td width="20%">
       <img src = "assets/imgt6.jfif"  width="680px">
@@ -108,16 +108,16 @@
       <br/>
 
       <H1 align = "center">Refrativa</H1>
-      <h2 align ="justify" >
+      <p align ="justify" >
         A cirurgia refrativa é um procedimento de visão realizado para corrigir problemas relacionados aos olhos ou à necessidade da utilização de óculos.
         A cirurgia refrativa é um procedimento a laser, eficaz e seguro,
        para corrigir miopia, hipermetropia, astigmatismo e presbiopia. As técnicas mais usadas são LASIK, PRK e Smile.
-      </h2>
+      </p>
 
   
        <td width="50%">
        <img src = "assets/imgt7.jpg" width= "40%" height="20%" >
-       <h3>Está imagem representa a cirurgia Refrativa sendo efetuado em um paciente</h3>
+       <p>Está imagem representa a cirurgia Refrativa sendo efetuado em um paciente</p>
 
       <br/>
       <br/>
