--- a/consultas.html
+++ b/consultas.html
@@ -45,10 +45,10 @@
         <h4>Está imagem representa uma consulta oftalmológica sendo efetuado em um paciente</h4>
         <br/>
         <br/>
-        <h2>A consulta oftalmológica é uma consulta que deve ser feita anualmente, pois as dioptrias podem mudar,
+        <p>A consulta oftalmológica é uma consulta que deve ser feita anualmente, pois as dioptrias podem mudar,
             aparecer doenças ou irritações no olho que com tratamento adequado conseguimos resolver o determinado problema do paciente, além do fato de estarmos
             falando de uma das partes mais importantes do nosso corpo, que é os nossos olhos.<p>
             A consulta acontece em torno de 1 a 2 horas, e dependendo do paciente de cada caso em esfecífico. Dependendo do paciente vai ter que ter o uso do colírio para que o médico tenha resultados mais precisos.
             O uso deste colírio tem efeitos após o uso, normalmente a visão do paciente vai ficar embaçada nas próximas 6 horas, o que impossibiloita o pasciente a dirigir qualquer meio de comunicação, como motos, carros e etc.
 em relação ao valor da consulta, ela pode ser feita de forma gratuita pelo SUS ou de forma particular, tendo uma média de valores de R$ 200,00 à R$ 500,00 esses valores vão variar de médico pra médico, no caso a consulta no Oftalmozini está no valor de R$ 250,00.
-            </p> </h2>
+            </p> </p>
