--- a/historia.html
+++ b/historia.html
@@ -36,7 +36,7 @@
 
         <img src = "assets/imgt9.jpeg"  width= "20%" height="20%" >
 
-        <H3> Meu nome é Karoline Cerozini e venho apresentar a minha história.
+        <p> Meu nome é Karoline Cerozini e venho apresentar a minha história.
             Primeiramente quando criança tinha um sonho em ser médica, não sabia em qual especialização ou por onde minha vida iria seguir, mas sabia aonde queria chegar.
             Logo após meu ensino médio ter sido concluído eu entrei para uma faculdade na minha cidade de Vilhena RO, com uma bols
             a de estudos e um sonho de ser uma especialista de excelência…conclui os estudos de medicina e fui fazer especialização em oftalmologia,
@@ -45,4 +45,4 @@
             
             Você aí que está necessitando ou tendo problemas com seus olhos, não deixe pra amanhã para procurar um profissional, entre em contato agora mesmo para marcar sua consulta na oftalmozini.
             
-            </H3>
+        </p>
