--- a/valores.html
+++ b/valores.html
@@ -60,10 +60,10 @@
 
      <td width="20%">
      <img src = "assets/imgt1.jpg" >
-     <h4>Está imagem representa o exame de Acuidade visual potencial a laser (PAM) sendo efetuado em um paciente</h4>
-     <h2 align ="justify" >
+     <p>Está imagem representa o exame de Acuidade visual potencial a laser (PAM) sendo efetuado em um paciente</p>
+     <p align ="justify" >
         O valor do exame PAM varia entre 200,00 e 500,00 reias
-        </h2>
+     </p>
      
     <br/>
     <br/>
@@ -79,10 +79,10 @@
       <td width="20%">
       <img src = "assets/imgt2.webp"  >
 
-      <h4>Está imagem representa o exame de Mapeamento da retina sendo efetuado em um paciente</h4>
-      <h2 align ="justify" >
+      <p>Está imagem representa o exame de Mapeamento da retina sendo efetuado em um paciente</p>
+      <p align ="justify" >
         O valor do exame de mapeamento da retina varia entre R$ 100,00 e R$ 400,00
-         </h2>
+      </p>
 
 
       <br/>
@@ -97,11 +97,11 @@
       <H1 align = "center">Teste do olhinho</H1>
        <td width="50%">
        <img src = "assets/imgt3.jfif" width= "40%" height="20%" >
-       <h4>Está imagem representa o exame de Teste do olhinho sendo efetuado em um paciente</h4>
+       <p>Está imagem representa o exame de Teste do olhinho sendo efetuado em um paciente</p>
 
-       <h2 align ="justify" >
+       <p align ="justify" >
        O exame do teste do olhinho normalmente não é cobrado, pois já é feito junto com o exame físico, mas se a pessoa optar por fazer o exame particular, o valor do exame vai ser doiacordo com o valor da consulta, ou seja a consulta vai pagar o teste.   
-      </h2>
+       </p>
 
 
       <br/>
@@ -116,11 +116,11 @@
       <H1 align = "center">Ceratometria</H1>
        <td width="20%">
        <img src = "assets/imgt4.jpg"  >
-       <h4>Está imagem representa o exame de Ceratometria sendo efetuado em um paciente</h4>
+       <p>Está imagem representa o exame de Ceratometria sendo efetuado em um paciente</p>
 
-       <h2 align ="justify" >
+       <p align ="justify" >
        A média de valor do exame de ceratometria é de R$ 150,00 à R$ 500,00
-          </h2>
+       </p>
 
           <br/>
           <br/>
@@ -133,9 +133,9 @@
           <H1 align = "center">Catarata</H1>
      <td width="20%">
      <img src = "assets/imgt5.jpg" >
-     <h4>Está imagem representa a cirurgia de catarata sendo efetuado em um paciente</h4>
+     <p>Está imagem representa a cirurgia de catarata sendo efetuado em um paciente</p>
 
-     <h2 align ="justify" >
+     <p align ="justify" >
         Os valores da cirurgia de catarata vai depender da lente intraocular que o paciente escolher colocar. <p>
         Os valores vão variar entre R$3.000 a R$20.000 mil, cada olho. </p>
     </h2>
@@ -151,11 +151,11 @@
      <H1 align = "center">Pterígio</H1>
       <td width="20%">
       <img src = "assets/imgt6.jfif" width="650px"  >
-      <h4>Está imagem representa a cirurgia de Pterígio sendo efetuado em um paciente</h4>
+      <p>Está imagem representa a cirurgia de Pterígio sendo efetuado em um paciente</p>
 
-      <h2 align ="justify" >
+      <p align ="justify" >
         A cirurgia de Pterígio custa em média R$ 6.000.
-     </h2>
+      </p>
 
 
       <br/>
@@ -170,11 +170,11 @@
       <H1 align = "center">Refrativa</H1>
        <td width="50%">
        <img src = "assets/imgt7.jpg" width= "40%" height="20%" >
-       <h3>Está imagem representa a cirurgia Refrativa sendo efetuado em um paciente</h3>
+       <p>Está imagem representa a cirurgia Refrativa sendo efetuado em um paciente</p>
 
-       <h2 align ="justify" >
+       <p align ="justify" >
         O preço da cirurgia refrativa, ou cirurgia para "correção do grau" para eliminar o uso de óculos varia entre R$2.500 a R$4.000 por olho, em média.
-      </h2>
+       </p>
       <br/>
       <br/>
       <br/>
